# SafeTextShare

./: README.md  manage.py  pyproject.toml
ML/: copy_models_to_static.py  create_model.ipynb  create_model.py  log.txt  manual_testing.py  manual_testing_v2.py  saved_model.pkl  saved_model_Logistic Regression.pkl  saved_model_Naive Bayes.pkl  saved_model_XGBoost.pkl
ML/data/: source.txt
SafeTextShare/: asgi.py  settings.py  urls.py  wsgi.py
UserText/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
UserText/migrations/: 0001_initial.py
UserText/templates/UserText/: all_posts.html  view_post.html
core/: urls.py  views.py
core/templates/core/: base.html  home.html  privacy_policy.html  terms_of_usage.html
static/: vectorizer.pkl
